src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedTranslationKey4/InvalidUnexpectedTranslationKey4.php
<?php

namespace Invalid\UnexpectedTranslationKey4;

use Claroline\CoreBundle\Plugin\ClarolineExtension;

class InvalidUnexpectedTranslationKey4 extends ClarolineExtension
{
    public function getDescriptionTranslationKey()
    {
        return new \DOMDocument();
    }
}